attempts to fix mobile styling, difficult as bug is only visible while on phone directly

--- a/workout_planner/static/styles.css
+++ b/workout_planner/static/styles.css
@@ -46,6 +46,13 @@ a {
           left: 5vw;
           padding: 0;
       }
+      button {
+        border: none;
+        border-radius: 5px;
+        background-color: transparent;
+        color: black;
+      }
+
 
   }
   
